--- a/web_seller_phone/package.json
+++ b/web_seller_phone/package.json
@@ -9,6 +9,8 @@
         "@reduxjs/toolkit": "^2.2.1",
         "antd": "^5.15.2",
         "classnames": "^2.5.1",
+        "node": "^21.7.1",
+        "nodemon": "^3.1.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
