--- a/web_seller_phone/package.json
+++ b/web_seller_phone/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.0",
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
@@ -15,6 +17,8 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.21.3",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.8",
         "web-vitals": "^2.1.4"
     },
