--- a/web_seller_phone/package.json
+++ b/web_seller_phone/package.json
@@ -7,14 +7,16 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@reduxjs/toolkit": "^2.2.1",
-        "antd": "^5.15.2",
+        "antd": "^5.15.3",
         "classnames": "^2.5.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.21.3",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
+        "redux": "^5.0.1",
+        "redux-thunk": "^3.1.0",
         "styled-components": "^6.1.8",
         "web-vitals": "^2.1.4"
     },
