--- a/web_seller_phone_backend/package.json
+++ b/web_seller_phone_backend/package.json
@@ -6,7 +6,7 @@
     "main": "App.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon src/App.js"
+        "start": "nodemon App.js"
     },
     "keywords": [],
     "author": "",
@@ -14,10 +14,13 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.5",
-        "express": "^4.19.1",
+        "express": "^4.19.2",
         "mysql2": "^3.9.2",
-        "nodemon": "^3.1.0",
+        "node": "18.20.0",
         "Router": "^2.1.0",
         "sequelize": "^6.37.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0"
     }
 }
