--- a/web_seller_phone_backend/package.json
+++ b/web_seller_phone_backend/package.json
@@ -6,7 +6,7 @@
     "main": "App.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon App.js"
+        "start": "nodemon src/App.js"
     },
     "keywords": [],
     "author": "",
